--- a/Resume.html
+++ b/Resume.html
@@ -14,7 +14,19 @@ Trickner7@gmail.com</p>
 
 <p>https://m.facebook.com/terry.rickner
 - For more pictures of some of my work.
-I have vocational completion certificates upon request.</p>
+I have vocational completion certificates upon request.<br></br>
+Submit Info For Contact:
+<form action="/action_page.php" autocomplete="on">
+  <label for="fname">First name:</label>
+  <input type="text" id="fname" name="fname"><br><br>
+  <label for="lname">Last name:</label>
+  <input type="text" id="lname" name="lname"><br><br>
+  <label for="email">Email:</label>
+  <input type="email" id="email" name="email"><br><br>
+  <label for="phone"Phone:</label>
+  <input type="text" id="phone number" name="phone number"><br><br>
+  <input type="submit" value="Submit">
+</form></p>
 
 <style> 
 
@@ -28,7 +40,7 @@ text-align:center;
 h1{border-style:solid;
 border-width:1px;
 border-color:white;
-    background-color:green;
+    background-color:red;
     paddinng-top:10px;
     padding-bottom:10px;
     padding-left:20px;
@@ -38,19 +50,19 @@ border-color:white;
 h2{border-style:solid;
 border-width:5px;
 border-color:white;
-background-color:green;
+background-color:red;
 } 
 
 h3{border-style:solid;
 border-width:5px;
 border-color:white;
-background-color:green;
+background-color:red;
 } 
 
 h4{border-style:solid;
 border-width:5px;
 border-color:white;
-background-color:green;
+background-color:red;
 } 
 
 </style> 
@@ -178,9 +190,10 @@ REFERENCES<p>
 Kathy Frazier, Frazier Manufacturing
 Sand Springs, OK</p>
 
+Mike Reiss, Frazier Manufacturing
+Sand Springs, OK
 <p>Mike Quinby, Owner Absolute Welding
 Owasso, OK</p>
-
 </footer> 
 
 </html>
