--- a/Resume.html
+++ b/Resume.html
@@ -1,4 +1,4 @@
-<doctype!html>
+no<doctype!html>
 <lang="en">
 <meta charset="8-utf"> 
 
@@ -192,6 +192,7 @@ Sand Springs, OK</p>
 
 Mike Reiss, Frazier Manufacturing
 Sand Springs, OK
+
 <p>Mike Quinby, Owner Absolute Welding
 Owasso, OK</p>
 </footer> 
