--- a/Resume.html
+++ b/Resume.html
@@ -7,26 +7,21 @@
 
 <head> 
 
-<p>2215 N. Houston St.
-Fort Worth, Texas 76164
-(682) 615-5776
-Trickner7@gmail.com</p>
-
-<p>https://m.facebook.com/terry.rickner
-- For more pictures of some of my work.
-I have vocational completion certificates upon request.<br></br>
-Submit Info For Contact:
-<form action="/action_page.php" autocomplete="on">
-  <label for="fname">First name:</label>
-  <input type="text" id="fname" name="fname"><br><br>
-  <label for="lname">Last name:</label>
-  <input type="text" id="lname" name="lname"><br><br>
-  <label for="email">Email:</label>
-  <input type="email" id="email" name="email"><br><br>
-  <label for="phone"Phone:</label>
-  <input type="text" id="phone number" name="phone number"><br><br>
-  <input type="submit" value="Submit">
-</form></p>
+<p>2215 N. Houston St. Fort Worth, Texas 76164<br></br> (682)615-5776 <br></br><a href="mailto: trickner7@gmail.com">Email me</a><p/>
+            <p><a href="https://www.facebook.com/terry.rickner">Visit Facebook</a> - For more pictures of some of my work. I have vocational completion certificates upon request.<br></br> 
+            Submit Info For Contact: 
+            <form action="/action_page.php" autocomplete="on"> 
+                <label for="fname">First name:</label> 
+                <input type="text" id="fname" name="fname"><br><br>
+                <label for="lname">Last name:</label>
+                <input type="text" id="lname" name="lname"><br><br>
+                <label for="email">Email:</label>
+                <input type="email" id="email" name="email"><br><br>
+                <label for="tel">Telephone:</label>
+                <input type="tel" id="phone number" name="phone number"><br><br>
+                <input type="submit" value="Submit"> </p>
+                </form>
+                </p>
 
 <style> 
 
