--- a/Resume.html
+++ b/Resume.html
@@ -1,4 +1,4 @@
-<doctype!html>
+<!doctypehtml>
 <lang="en">
 <meta charset="8-utf"> 
 
@@ -66,7 +66,9 @@ background-color:red;
 
 <body> 
 
-<h1>PROFESSIONAL SUMMARY<p>
+<h1>PROFESSIONAL SUMMARY<br></br>
+    <img soure="/storage/emulated/0/DCIM/Restored/20210924_211115.jpg" alt= "company logo">
+    <p>
 My name is Terry Rickner. I was born in Tulsa, Oklahoma and raised in Drumright, Oklahoma a small oilfield town in Northeast Oklahoma. I have technical training and certification in Welding from Central Technology School in Sapulpa-Drumright, Oklahoma. I have experience has a fabrication welder (3 years) and a variety of home renovation specialties (3 years) such as demolition, drywall, hanging sheet rock, flooring and painting. Warehouse Forklift high reach, pallet jack and clamp (1year). Oilfield Well Service and Construction (7 years) I have my own work I do part  time or upon opportunities. I am a freelance front-end web designer currently working on a website design portfolio.</p></h1> 
 
 <h2>SKILLS<p>
