--- a/Resume.html
+++ b/Resume.html
@@ -1,13 +1,13 @@
 <!doctypehtml>
 <lang="en">
-<meta charset="8-utf"> 
+<meta charset="UTF-8"> 
 
 <title>Terry Rickner
 </title> 
 
 <head> 
 
-<p>2215 N. Houston St. Fort Worth, Texas 76164<br></br> (682)615-5776 <br></br><a href="mailto: trickner7@gmail.com">Email me</a><p/>
+<p><a href="mailto: trickner7@gmail.com">Email me</a><p/>
             <p><a href="https://www.facebook.com/terry.rickner">Visit Facebook</a> - For more pictures of some of my work. I have vocational completion certificates upon request.<br></br> 
             Submit Info For Contact: 
             <form action="/action_page.php" autocomplete="on"> 
@@ -184,13 +184,13 @@ I take pride in overcoming obstacles thrown my way. I always do my best work to 
 
 <footer>
 REFERENCES<p>
-Kathy Frazier, Frazier Manufacturing
-Sand Springs, OK</p>
-
-Mike Reiss, Frazier Manufacturing
+Frazier Manufacturing
 Sand Springs, OK
 
-<p>Mike Quinby, Owner Absolute Welding
+AAON
+Tulsa, OK
+
+Owner Absolute Welding
 Owasso, OK</p>
 </footer> 
 
