--- a/Resume.html
+++ b/Resume.html
@@ -2,32 +2,23 @@
 <lang="en">
 <meta charset="UTF-8"> 
 
-<title>Terry Rickner
+<title>Resume
 </title> 
 
 <head> 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&display=swap" rel="stylesheet">
 
-<p><a href="mailto: trickner7@gmail.com">Email me</a><p/>
-            <p><a href="https://www.facebook.com/terry.rickner">Visit Facebook</a> - For more pictures of some of my work. I have vocational completion certificates upon request.<br></br> 
-            Submit Info For Contact: 
-            <form action="/action_page.php" autocomplete="on"> 
-                <label for="fname">First name:</label> 
-                <input type="text" id="fname" name="fname"><br><br>
-                <label for="lname">Last name:</label>
-                <input type="text" id="lname" name="lname"><br><br>
-                <label for="email">Email:</label>
-                <input type="email" id="email" name="email"><br><br>
-                <label for="tel">Telephone:</label>
-                <input type="tel" id="phone number" name="phone number"><br><br>
-                <input type="submit" value="Submit"> </p>
-                </form>
-                </p>
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Anton&family=Josefin+Sans:ital,wght@0,100..700;1,100..700&display=swap" rel="stylesheet">
 
 <style> 
 
 body {
 background-color:black;
-font-family:Ariel, Veranda, Sans-serif;
+font-family:"Josefin Sans", sans-serif;
 color:white;
 font-size:12;
 text-align:center;
@@ -39,37 +30,32 @@ border-color:white;
     paddinng-top:10px;
     padding-bottom:10px;
     padding-left:20px;
-    padding-right:20px; 
-
+    padding-right:20px;
+font-family:Anton; 
 }
 h2{border-style:solid;
 border-width:5px;
 border-color:white;
 background-color:red;
 } 
-
 h3{border-style:solid;
 border-width:5px;
 border-color:white;
 background-color:red;
 } 
-
 h4{border-style:solid;
 border-width:5px;
 border-color:white;
 background-color:red;
 } 
-
 </style> 
-
 </head> 
-
-<body> 
-
-<h1>PROFESSIONAL SUMMARY<br></br>
-    <img soure="/storage/emulated/0/DCIM/Restored/20210924_211115.jpg" alt= "company logo">
+<body>Terry Rickner<br>
+            Tulsa, OK
+<h1>PROFESSIONAL SUMMARY<br>
+    <img src="https://64.media.tumblr.com/c0cc9f6eee02e12e166366886b965928/ee0d103103dc5340-f6/s96x96u_c1/2155cd58eea69c4a33c09d67054537692ebd4801.jpg" alt="profile" height='100' width='100'>
     <p>
-My name is Terry Rickner. I was born in Tulsa, Oklahoma and raised in Drumright, Oklahoma a small oilfield town in Northeast Oklahoma. I have technical training and certification in Welding from Central Technology School in Sapulpa-Drumright, Oklahoma. I have experience has a fabrication welder (3 years) and a variety of home renovation specialties (3 years) such as demolition, drywall, hanging sheet rock, flooring and painting. Warehouse Forklift high reach, pallet jack and clamp (1year). Oilfield Well Service and Construction (7 years) I have my own work I do part  time or upon opportunities. I am a freelance front-end web designer currently working on a website design portfolio.</p></h1> 
+My name is Terry Rickner. I was born in Tulsa, Oklahoma and raised in Drumright, Oklahoma a small oilfield town in Northeast Oklahoma. I have technical training and certification in Welding from Central Technology School in Sapulpa-Drumright, Oklahoma. I have experience as a fabrication welder (3 years) and a variety of home renovation specialties (3 years) such as demolition, drywall, hanging sheet rock, flooring and painting. Warehouse Forklift high reach, pallet jack and clamp (1year). Oilfield Well Service and Construction (7 years) I have my own work I do part time or upon opportunities. I am a freelance front-end web designer currently working on a website design portfolio. I served in the United States Marine Corps Reserves as a Field Radio Operator as well as trained in Anti-Armor Weapon Systems 2009-2012.</p></h1> 
 
 <h2>SKILLS<p>
 Welding fabrication, repairs and troubleshooting
@@ -79,7 +65,7 @@ Tool maintenance
 Manual dexterity 
 Structural welding
 Oxygen acetylene and plasma torch cutting
-Sub-arc robotic welding, SMAW welding and GMAW welding
+Sub-arc, robotic welding, SMAW welding and GMAW welding
 Equipment inspections and preventive maintenance
 I have personal marketing and advertising skills
 CNC Punch, shear bending unit combination with G-code programming modifications and CAD commands
@@ -93,7 +79,19 @@ Technical school training welding
 Fast learner
 I have a expectation of quality in the work I do</p></h2> 
 
-<h3>WORK HISTORY<p>
+<h3>WORK HISTORY
+<p>Processor/ North Pacific Seafoods/ Naknek, AK
+July 2024-June 2024
+Processing position for Salmon season. Served as a sorter for the graders.
+</p>
+<p>Nordstrom/ Seattle, WA
+November 2023-January 2024
+Fulfillment of merchandise for web applications.</p>
+<p>Amazon/ Seattle, WA
+July 2023-October 2023
+Fulfillment for distribution center
+</p>
+<p>
 Case picker/ Lineage Logistics/Fort Worth,TX
 March 2022-September 2022</p><p>
 I moved to Fort Worth in 2022 I have worked at Lineage Logistics as a case picker. My primary MHE is a single pallet jack. I gained experience using a clamp, double pallet jack and occasionally a docker forklift. My daily task includes inspecting my MHE, logging out gear used in my task and having necessary materials to efficiently perform my task and meet my goals.</p> 
@@ -171,13 +169,11 @@ Certificate in Welding Technologies</p>
 
 <h4>
 <p>SKILLS & ABILITIES</p>
-<p>Carpentry, Steel Fabrication
-I have built customized items for customers such as home decorations, horse shoe art, I've built trailer hitches and trailer repairs for customers, I have built trailer ramps. I have home remodeling and demolition experience. </p>
-
+<p>I enjoy building. I like to work with Automated Machines, Software, and UX/UI development. I like working with hand tools and power tools. I enjoy building my skills with knowledge. I do not mind working hard and getting dirty to complete the task necessary.
 <p>PROJECTS</p>
 <p>I have some experience in constructing a website for my own business projects. I also have a portfolio of work I have listed and completed. 
 
-I take pride in overcoming obstacles thrown my way. I always do my best work to my abilities and strive for progress for becoming a better person and teammate each and everyday.</p>
+I take pride in overcoming obstacles thrown my way. I always do my best work to my abilities and strive for progress for becoming a better person and everyday.</p>
 </h4> 
 
 </body> 
@@ -192,6 +188,22 @@ Tulsa, OK
 
 Owner Absolute Welding
 Owasso, OK</p>
+<br>
+<p><a href="mailto: trickner7@gmail.com">Email me</a><p/>
+    <p><a href="https://www.facebook.com/terry.rickner">Visit Facebook</a> - For more pictures of some of my work. I have vocational completion certificates upon request.<br></br> 
+    Submit Info For Contact: 
+    <form action="/action_page.php" autocomplete="on"> 
+        <label for="fname">First name:</label> 
+        <input type="text" id="fname" name="fname"><br><br>
+        <label for="lname">Last name:</label>
+        <input type="text" id="lname" name="lname"><br><br>
+        <label for="email">Email:</label>
+        <input type="email" id="email" name="email"><br><br>
+        <label for="tel">Telephone:</label>
+        <input type="tel" id="phone number" name="phone number"><br><br>
+        <input type="submit" value="Submit"> </p>
+        </form>
+        </p>
 </footer> 
 
 </html>
