--- a/Resume.html
+++ b/Resume.html
@@ -179,15 +179,7 @@ I take pride in overcoming obstacles thrown my way. I always do my best work to 
 </body> 
 
 <footer>
-REFERENCES<p>
-Frazier Manufacturing
-Sand Springs, OK
-
-AAON
-Tulsa, OK
-
-Owner Absolute Welding
-Owasso, OK</p>
+REFERENCES
 <br>
 <p><a href="mailto: trickner7@gmail.com">Email me</a><p/>
     <p><a href="https://www.facebook.com/terry.rickner">Visit Facebook</a> - For more pictures of some of my work. I have vocational completion certificates upon request.<br></br> 
